[REFACTOR]: web-ui: fix the vertical align issue of core/Amount

--- a/packages/web-ui/src/core/Amount/index.less
+++ b/packages/web-ui/src/core/Amount/index.less
@@ -34,18 +34,15 @@
 
     > .prefix {
         display: inline-block;
-        vertical-align: middle;
         margin-right: 2px;
     }
 
     > .postfix {
         display: inline-block;
-        vertical-align: middle;
         margin-left: 2px;
     }
 
     > .digits {
         display: inline-block;
-        vertical-align: middle;
     }
 }
